--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "postcss": "^8.4.29",
     "postcss-cli": "^10.1.0",
-    "postcss-preset-env": "^9.1.3"
+    "postcss-preset-env": "^9.1.3",
+    "sass": "^1.66.1"
   }
 }
